--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "homepage": "https://github.com/Strxng/projeto-integrador-pw2#readme",
   "devDependencies": {
+    "eslint": "^8.17.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^2.0.16"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
-    "eslint": "^8.17.0",
     "express": "^4.18.1"
   }
 }
