--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=8080
+DB_NAME='nursery'
+DB_HOST='localhost'
+DB_USER='sa'
+DB_PASSWORD='reallyStrongPass123'
+TOKEN_SECRET='reallyStrongSecret123'
