--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "sequelize": "^6.20.1",
+    "tedious": "^14.5.0"
   }
 }
