--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "sequelize": "^6.20.1",
     "tedious": "^14.5.0"
   }
