Vacancies to director and admin users

--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ DB_HOST='localhost'
 DB_USER='sa'
 DB_PASSWORD='reallyStrongPass123'
 TOKEN_SECRET='reallyStrongSecret123'
-ID_LEVEL_COMMON_USER=3
-ID_LEVEL_DIRECTOR=2
+ID_LEVEL_COMMON_USER='3'
+ID_LEVEL_DIRECTOR='2'
+ID_LEVEL_ADMIN='1'
